@@ -41,6 +41,7 @@ struct device_data {
 	char human_name[4096];
 	uint64_t urbs, active, connected;
 	uint64_t previous_urbs, previous_active, previous_connected;
+	int controller;
 };
 
 
@@ -120,6 +121,9 @@ static void update_urbnum(char *path, uint64_t count, char *shortname)
 		strcpy(ptr->human_name, path);
 	else
 		sprintf(ptr->human_name, _("USB device %4s : %s (%s)"), shortname, name, vendor);
+
+	if (strstr(ptr->human_name, "Host Controller"))
+		ptr->controller = 1;
 	
 }
 
@@ -174,6 +178,41 @@ void display_usb_activity(void)
 	while (dev) {
 		printf("%5.1f%%\t%s\n", 100.0*(dev->active - dev->previous_active) / 
 			(0.00001 + dev->connected - dev->previous_connected), dev->human_name);
+		dev = dev->next;
+	}
+
+}
+
+void usb_activity_hint(void)
+{
+	int total_active = 0;
+	int pick;
+	struct device_data *dev;
+	dev = devices;
+	while (dev) {
+		if (dev->active-1 > dev->previous_active && !dev->controller)
+			total_active++;
+		dev = dev->next;
+	}
+	if (!total_active)
+		return;
+
+	pick = rand() % total_active;
+	total_active = 0;
+	dev = devices;
+	while (dev) {
+		if (dev->active-1 > dev->previous_active && !dev->controller) {
+			if (total_active == pick) {
+				char usb_hint[8000];
+				sprintf(usb_hint, _("A USB device is active %4.1f%% of the time:\n%s"),
+				 100.0*(dev->active - dev->previous_active) / 
+				(0.00001 + dev->connected - dev->previous_connected),
+				dev->human_name);
+				add_suggestion(usb_hint,
+				1, 'U', _(" U - Enable USB suspend "), activate_usb_autosuspend);
+			}
+			total_active++;
+		}
 		dev = dev->next;
 	}
 
